medp285/finalproject/maze.css
#playerList {
    border: 2px solid #000;
    margin: 1em;
}

#popup {
    display: none;
    position: fixed;
    z-index: 1;
    padding-top: 100px;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0,0,0,0.4);
}

#popupMsg {
    background-color: white;
    margin: auto;
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
}

#popupButtons {
    position: relative;
    width: 80%;
    left: 10%;
    color: #aaaaaa;
    font-size: 28px;
    font-weight: bold;
}

#popupButtons:hover, #popupButtons:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

#popupStay {
    float: left;
}

#popupRestart {
    float: right;
}   

#chatLogContainer{
    position: relative;
    border: 2px solid #000;
    margin-top: 1em;
    margin-left: 1em;
    margin-right: 1em;
    margin-bottom: 1em;
    height: 200px;
}

#chatLogTitle {
    position: relative;
    margin: 0;
    height: 10%;
}

#chatLog {
    position: relative;
    /* border: 2px solid #000; */
    margin: 0;
    overflow-y: scroll;
    height: 80%;
}

#chatInputBox {
    position: relative;
    border: 2px solid #000;
    margin: 1em;
    height: 10%;
    /*top: 0px;*/

}

#chatHistryContainer {
    position: relative;
    border: 2px solid #000;
    margin-top: 1em;
    margin-left: 1em;
    margin-right: 1em;
    margin-bottom: 1em;
    height: 200px;
}

#chatHistory {
    position: relative;
    border-top: 2px solid #000;
    margin: 0;
    overflow-y: scroll;
    height: 80%;
}

#chatHistoryButton {
    position: relative;
    margin: 0;
    height: 20%;
}



#screen {
    position: relative;
    width: 320px;
    height: 200px;
    overflow: hidden;
    border: 2px solid #000;
}

#gameViewPort {
    border: 2px solid #000;
}

#map {
    position : absolute;
}

#mapObjects {
    position : absolute;
}

